# uniword

./: .bzrignore  .gitignore  CMakeLists.txt  DebPack.CMakeLists.txt  List_of_Unicode_characters.html  MainWindow.C  MainWindow.H  Makefile  README.md  Universe.C  Universe.H  UnixInstall.CMakeLists.txt  WinPack.CMakeLists.txt  alias.txt  bigexpl.qrc  blockindex.html  blockindex2data.pl  charindex.html  charindex2data.pl  chars.txt  getBlocks.pl  getData.pl  getIndex.pl  groups.txt  list2morechars.pl  main.C  morechars.txt  qrc_bigexpl.cpp  rebuild.sh  unicode.qrc  uniword  uniword.pro  wiki2morechars.pl
.github/: get-build-requirements
.github/workflows/: uploaddeb.yml  uploadexe.yml
debian/: changelog  control  copyright  install  uniword.desktop
src/: CenterWindow.C  CenterWindow.H  CenterWindow.cpp  CenterWindow.h  MainWindow.C  MainWindow.H  MainWindow.cpp  MainWindow.h  Makefile  OutputWidget.cpp  OutputWidget.h  Universe.C  Universe.H  Universe.cpp  Universe.h  about.html  help.html  main.C  main.cpp  unicode.qrc  uniword.desktop  uniword.pro  uniword.qrc
tables/: alias.txt  blocks.txt  chars.txt  groups.txt
tools/: buildPackage.sh  getBlocks.pl  getData.pl  getIndex.pl  parseNamesList.pl
